Fixing Bootstrap Overflow  Bug
Should fix the horizontal scroll bar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,6 @@
+body{
+    overflow-x:hidden;
+}
 .container-fluid {
     padding:0px !important;
 }
